--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Слава Україні! 🇺🇦</title>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-HVS4ZZFDPZ"></script>
+		<script>
+	  	window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+	
+  		gtag('config', 'G-HVS4ZZFDPZ');
+	</script>
+	
 	<style>
 		body{
 			color: lightgreen;
@@ -33,7 +44,7 @@
 		<td class="glory">
 			DDoS attack on Russian IT infrastructure
 			<span style="margin: 0 0.2em; opacity: 0.5;">/</span>
-			Слава Україні! 🇺🇦</td>
+			Слава&nbsp;Україні! 🇺🇦</td>
 		<td align="right">
 			Total requests: <span id="statsTotal">0</span>
 			<span style="margin: 0 0.2em; opacity: 0.5;">/</span>
